added loading attributes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             </div>
             <div id="elem2" class="elem">
-                <img data-scroll data-scroll-speed="1"
+                <img data-scroll data-scroll-speed="1" loading="lazy"
                     src="https://i.pinimg.com/736x/4c/e5/b3/4ce5b39779712b702c7aeb2d0c05a2c4.jpg"
                     alt="">
                 <div data-scroll data-scroll-speed="-2" class="dets"></div>
@@ -77,7 +77,7 @@
             </div>
             <div id="elem3" class="elem">
 
-                <img data-scroll data-scroll-speed="1"
+                <img data-scroll data-scroll-speed="1" loading="lazy"
                     src="https://i.pinimg.com/736x/e7/6d/fa/e76dfadee0df8adb9abf005794f85717.jpg"
                     alt="">
                 <div data-scroll data-scroll-speed="-2" class="dets"></div>
@@ -87,21 +87,21 @@
         </div>
         <div id="page3">
             <div class="child" id="child1">
-                <img src="./ki.png"
+                <img loading="lazy" src="./ki.png"
                     alt="">
             </div>
             <div class="child" id="child2">
-                <img src="./kii.png"
+                <img loading="lazy" src="./kii.png"
                     alt="">
 
             </div>
             <div class="child" id="child3">
-                <img src="./kiii.png"
+                <img loading="lazy" src="./kiii.png"
                     alt="">
 
             </div>
             <div class="child" id="child4">
-                <img src="./kiiii.png"
+                <img loading="lazy" src="./kiiii.png"
                     alt="">
 
             </div>
